# optimize

./: .gitignore  README.md  agp.py  for_report.py  for_report_jmetal.py  main.py  methods.py  test_functions.py
archive/: agp_first.py  agp_fourth.py  agp_third.py  calculator.py  interval.py  parameters.py  solution.py
archive/report/: for_report.py  main.py
benchmarking/: bm.py
c_implementation/: myevolvent.py
c_implementation/evolvent_lib/: CMakeLists.txt  library.c  library.h  sample.c
examples/asynchronius/: gkls_async.py  grishagin.py  svc_async.py
examples/asynchronius-algorithm/: gkls.py  gkls_async.py  grishagin.py  svc.py  tsp_async.py
examples/asynchronous-algorithm/: gkls.py  grishagin.py  svc.py
examples/mpi/: svc_mpi.py
examples/mpi-algorithm/: gkls.py  grishagin.py  svc.py
examples/mpipool/: gkls.py  grishagin.py  svc.py
examples/mpipool-algorithm/: gkls.py  grishagin.py  svc.py
examples/parallel-algorithm/: gkls.py  (+2 more)
modules/: async_solver.py  asynchronous_solver.py  mpi_pool_solver.py  mpi_solver.py  mpipoolsolver.py  mpisolver.py  parallel_solver.py  parallelsolver.py  pool_solver.py  sequential_solver.py  sequentialsolver.py  solve.py
modules/evolvent/ctypes/lib/: CMakeLists.txt  library.c  library.h
problems/: gkls_function.py  grishagin_function.py  shekel_function.py  svc.py
report/: for_report_jmetal.py
sample/: process.py  sample.py
sandbox/: pool.py  process.py  queue_test.py  sample2.py
testing/: async_test.py  asynchronous_test.py  mpi_test.py  mpipool_test.py  ndim_test.py  parallel_test.py  sequential_test.py
(+98 files in other folders)
